erDiagram
    Game {
        Identity id
        String name
        u32 current_round
        usize current_player_index
    }
    Player {
        Identity id
    }
    User {
        Identity id
        String name
        String password
    }
    Stat {
        Identity id
        String key
        Value value
    }

    Game ||--o{ Player : has
    Player ||--|| User : represents
    Player ||--o{ Stat : has